[package]
name = "rustLib"
version = "0.1.0"
authors = ["Aleksander Okonski <aleksander.oko@attackpointsecurity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
libc = "0.2"

[dependencies.cuckoofilter]
git = "https://github.com/seiflotfy/rust-cuckoofilter"
tag = "v0.4.0"

[lib]
name = "rustLib"
path = "./src/rustLib.rs"
crate-type = ["dylib"]
